# cookbook_template

./: .gitignore  Dockerfile  GEMINI.md  Makefile  README.md  calibre_extra_css.css  create_cover.ps1  create_cover.sh  epub.css  epub.yaml  epub2.css  gen.bat  gen.ps1  gen.sh  title.txt  zb.theme
.github/workflows/: build.yml
chapters/: 00_preface.md  01_introduction.md  02_setup.md  chapter1.md  chapter2.md  chapter_01.md
cookbook_generator/: Cargo.toml  README.md  build.ps1  build.sh  config.txt
cookbook_generator/.cargo/: config.toml
cookbook_generator/src/: main.rs
