[package]
name = "cookbook_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
glob = "0.3.1"
regex = "1.10.4"
walkdir = "2.5.0"
anyhow = "1.0.82"